aligned itms lists and for correctly

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 img{
-    border-top: 2px solid black;
+    border-top: 2px solid black;    
     position: absolute;
     bottom: 8px;
     left: 16px;
@@ -14,4 +14,16 @@ img{
     width: 15rem; 
     height: auto;
     text-decoration: overline;
+}
+
+.foot.container{
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.subscribe{
+
+    text-align: left;
 }
